--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1,28 +1,28 @@
 @article{valentin,
   title   = "Implementation of the entropy viscosity method with the discontinuous Galerkin method",
-  journal = "Berlin: Springer",
+  author  = "V Zingan and J L Guermond and J Morel and B Popov",
+  journal = "Journal of Comput. Phys",
   volume  = "253",
   pages   = "479-490",
   year    = "2013",
-  author  = "V. Zingan, J-L. Guermond, J. Morel and B. Popov"
 }
 
 @article{jlg1,
   title   = "Entropy viscosity method for nonlinear conservation laws",
-  journal = "Journal of Comput. Phys",  
+  author  = "J L Guermond and R Pasquetti",
+  journal = "Journal of Comput. Phys",
   volume  = "230",
   pages   = "4248-4267",
   year    = "2011",
-  author  = "J-L. Guermond, R. Pasquetti"
   }
 
 @article{jlg2,
   title   = "Entropy Viscosity Method for High-Order Approximations of Conservation Laws",
+  author  = "J L Guermond and R Pasquetti",
   journal = "Lecture Notes in Computational Science and Engineering",
   volume  = "76",
   pages   = "411-418",
   year    = "2011",
-  author  = "J-L. Guermond, R. Pasquetti"
   }
 
 @conference{jlg3,
@@ -32,55 +32,198 @@
   pages   = "801-806",
   year    = "2008",
   address = "Paris",
-  author  = "J-L. Guermond, R. Pasquetti"
+  author  = "J L Guermond and R Pasquetti",
   }
 
 @book{Toro,
-author    = "E.F. Toro",
-title     = "Riemann Solvers and numerical methods for fluid dynamics",
-year      = "1999",
-publisher = "$2^{nd}$ Edition, Springer",
-}
+  author    = "E F Toro",
+  title     = "Riemann Solvers and numerical methods for fluid dynamics",
+  year      = "1999",
+  publisher = "$2^{nd}$ Edition, Springer",
+  }
 
 @article{jlg,
   title   = "Viscous regularization of the Euler equations and entropy principles",
+  author  = "J L Guermond and B Popov",
   journal = "under review",
   year    = "2012",
-  author  = "J-L. Guermond and B. Popov"
   }
 
 @article{Moose,
   title   = "A parallel computational framework for coupled systems of nonlinear equations",
+  author  = "D Gaston and C Newsman and G Hansen and D Lebrun-Grandie",
   journal = "Nucl. Eng. Design",
   volume  = "239",
   pages   = "1768-1778",
   year    = "2009",
-  author  = "D. Gaston, C. Newsman, G. Hansen and D. Lebrun-Grandie"
   }
 
 @article{JFNK,
   title   = "Jacobian-free Newton-Krylov methods: a survey of approaches and applications",
+  author  = "D A Knoll and D E Keyes",
   journal = "Journal of Computational Physics",
   volume  = "193",
   pages   = "357-397",
   year    = "2004",
-  author  = "Knoll D. A., Keyes D. E."
   }
   
 @article{SEM,
   title   = "The discrete equation method (DEM) for fully compressible, two-phase flows in ducts of spatially varying cross-section",
+  author  = "R Berry and R Saurel and O LeMetayer",
   journal = "Nuclear Engineering and Design",
   volume  = "240",
   pages   = "3797-3818",
   year    = "2010",
-  author  = "R. Berry, R. Saurel, O. LeMetayer"
   }
 
 @article{Parabolic,
   title   = "On positivity preserving finite volume schemes for Euler equations",
+  author  = "B Perthane and C W Shu",
   journal = "Numer. Math.",
   volume  = "73",
   pages   = "119-130",
   year    = "1996",
-  author  = "Perthane B. and Shu C-W."
+  }
+
+@book{IGEOS,
+  title   = "A to Z of Thermodynamics",
+  author = "P Perrot",
+  year      = "1998",
+  publisher = "Oxford University Press",
+  }
+
+@article{SGEOS,
+  title   = "Elaborating equation of state for a liquid and its vapor for two-phase flow models",
+  author  = "O LeMetayer and J Massoni and R Saurel",
+  journal = "International Journal of Thermal Science",
+  volume  = "43",
+  pages   = "265-276",
+  year    = "2004",
+  }
+
+@article{Lapidus_paper,
+  title   = "A detached shock calculation by second order finite differences",
+  author  = "A Lapidus",
+  journal = "J. Comput. Phys.",
+  volume  = "2",
+  pages   = "154-177",
+  year    = "1967",
+  }
+
+@article{LMP,
+  title   = "A simple extension to multidimensional problems of the artificial viscosity due to Lapidus",
+  author  = "R Lohner and K Morgan and J Peraire",
+  journal = "Commun. Numer. Methods Eng.",
+  volume  = "1(14)",
+  pages   = "141-147",
+  year    = "1985",
+  }
+
+@book{Lapidus_book,
+  title   = "Finite Element Methods for Flow Problems",
+  author = "J Donea and A Huerta",
+  year      = "2003",
+  publisher = "Oxford University Press",
+  }
+
+@book{PBV_book,
+  title   = "Applied CFD Techniques: an Introduction based on Finite Element Methods",
+  author = "R Lohner",
+  year      = "2003",
+  publisher = "$2^{nd}$ Edition Wiley",
+  }
+
+@article{Roe,
+  title   = "An All-Speed Roe-type scheme and its asymptotic analysis of low Mach number behavior",
+  author  = "X-S Li and C-W Gu",
+  journal = "Journal of Computational Physics",
+  volume  = "227",
+  pages   = "5144-5159",
+  year    = "2008",
+  }
+
+@article{LowMach1,
+  title   = "On the behavior of upwind schemes in the low Mach number limit",
+  author  = "H Guillard and C Viozat",
+  journal = "Computers \& Fluids",
+  volume  = "28",
+  pages   = "63-86",
+  year    = "1999",
+  }
+
+@article{LowMach2,
+  title   = "Preconditioned techniques in computational fluid dynamics",
+  author  = "E Turkel",
+  journal = "Annu. Rev. Fluid Mech.",
+  volume  = "31",
+  pages   = "385-416",
+  year    = "1999",
+  }
+
+@article{LowMach3,
+  title   = "The solution of the compressible Euler equations at low Mach numbers using a stabilized finite element algorithm",
+  author  = "J S Wong D L and Darmofal and J Peraire",
+  journal = "Comput. Methods Appl. Mech. Engrg.",
+  volume  = "190",
+  pages   = "5719-5737",
+  year    = "2001",
+  }
+    
+@conference{CompressionCorner,
+  title   = "Modern Compressible Flow",
+  booktitle = "Guide for Verification and Validation in Computational Solid
+Mechanic.",
+  pages   = "10-2006",
+  year    = "1982",
+  address = "New York",
+  author  = "J D Anderson",
+  }
+
+@article{Hump,
+  title   = "A Robust Multigrid Algorithm for the Euler Equations with Local Preconditioning and Semi-coarsening",
+  author  = "D L Darmofal and K Siu",
+  journal = "Journal of Computational Physics",
+  volume  = "151",
+  pages   = "728–756",
+  year    = "1999",
+  }
+
+@article{Leblanc,
+  title   = "Validation Test Case Suite for compressible hydrodynamics computation",
+  author  = "R Loubere",
+  journal = "Theoritical Division T-7 Los Alamos National Laboratory",
+  }
+
+@article{Muller,
+  title   = "Low-Mach number asymptotes of the Navier-Stokes equations",
+  author  = "B Muller",
+  journal = "Journal of Engineering Mathematics",
+  volume  = "34",
+  pages   = "97–109",
+  year    = "1998",
+  }  
+
+@article{FluxLimiter,
+  title   = "Advanced numerical approximation of nonlinear hyperbolic equations",
+  author  = "B Cockburn and C Johnson and C Shu and E Tadmor",
+  journal = "Lecture Notes in Mathematics",
+  volume  = "1697",
+  #pages   = "97–109",
+  year    = "1998",
+  }
+
+@article{FluxLimiter2,
+  title   = "Discontinuous Galerkin methods: theory, computation and applications",
+  author  = "B Cockburn and G Karniadakis and C Shu",
+  journal = "Lecture Notes in Computer Science and Engineering",
+  volume  = "11",
+  #pages   = "97–109",
+  year    = "2000",
+  }
+
+@book{CompressionCorner,
+  title   = "Modern Compressible Flow: With Historical Perspective",
+  author = "J Anderson",
+  year      = "1982",
+  publisher = "McGraw-Hill Science Engineering",
   }
